apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__enums_from_response_fragment_in_two_field_contexts.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: "&generated"
---
SomeEnum:
  - SOME_VALUE_1
  - SOME_VALUE_2
