apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__enums_from_response_fragments.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: "&generated"
---
SomeEnum:
  - SOME_VALUE_5
  - SOME_VALUE_6
  - SOME_VALUE_1
  - SOME_VALUE_11
  - SOME_VALUE_10
  - SOME_VALUE_14
  - SOME_VALUE_4
  - SOME_VALUE_8
  - SOME_VALUE_13
