apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__enums_with_nested_query.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: "&generated"
---
referenced_input_fields: {}
referenced_enums:
  SomeEnum:
    - SOME_VALUE_1
