apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__fragments.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: generated
---
result:
  statsReportKey: "# FragmentQuery\nfragment ZZZFragment on EverythingResponse{listOfInterfaces{sharedField}}fragment aaaFragment on EverythingResponse{listOfInterfaces{sharedField}}fragment aaaInterfaceFragment on InterfaceImplementation1{sharedField}fragment bbbInterfaceFragment on InterfaceImplementation2{implementation2Field sharedField}fragment zzzFragment on EverythingResponse{listOfInterfaces{sharedField}}query FragmentQuery{noInputQuery{interfaceResponse{sharedField...aaaInterfaceFragment...bbbInterfaceFragment...on InterfaceImplementation2{implementation2Field}...{...on InterfaceImplementation1{implementation1Field}}...on InterfaceImplementation1{implementation1Field}}listOfBools unionResponse{...on UnionType2{unionType2Field}...on UnionType1{unionType1Field}}...ZZZFragment...aaaFragment...zzzFragment}}"
  referencedFieldsByType:
    AnInterface:
      fieldNames:
        - sharedField
      isInterface: true
    EverythingResponse:
      fieldNames:
        - interfaceResponse
        - listOfBools
        - listOfInterfaces
        - unionResponse
      isInterface: false
    InterfaceImplementation1:
      fieldNames:
        - implementation1Field
        - sharedField
      isInterface: false
    InterfaceImplementation2:
      fieldNames:
        - implementation2Field
        - sharedField
      isInterface: false
    Query:
      fieldNames:
        - noInputQuery
      isInterface: false
    UnionType1:
      fieldNames:
        - unionType1Field
      isInterface: false
    UnionType2:
      fieldNames:
        - unionType2Field
      isInterface: false
